add docker and unit test
